# zerompk

./: README.md  README_JA.md
.github/workflows/: ci.yml
zerompk/: Cargo.toml
zerompk/benches/: deserialize_file.rs  deserialize_large_array.rs  serialize_file.rs
zerompk/src/: consts.rs  error.rs  impl.rs  lib.rs  read.rs  write.rs
zerompk/tests/: cross_path_test.rs  derive.rs  deserialize.rs  serialize.rs  write_ext.rs
zerompk_derive/: Cargo.toml
zerompk_derive/src/: lib.rs
