[package]
name = "zerompk"
description = "A zero-copy, zero-dependency, no_std-compatible, extremely fast MessagePack serializer for Rust."
version = "0.1.0"
edition = "2024"
readme = "../README.md"
license = "MIT"

[features]
default = ["std"]
std = []
derive = ["dep:zerompk_derive"]
chrono = ["dep:chrono"]

[dependencies]
zerompk_derive = { version = "0.1.0", path = "../zerompk_derive", optional = true }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
], optional = true }

[dev-dependencies]
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
zerompk_derive = { path = "../zerompk_derive" }
chrono = "0.4"
serde_json = "1.0.149"
serde_bytes = "0.11.19"
msgpacker = "0.6.1"
