[package]
name = "zerompk_derive"
repository = "https://github.com/nuskey8/zerompk"
documentation = "https://docs.rs/zerompk_derive"
description = "proc-macro crate for zerompk"
version = "0.4.0"
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
